<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bts.sio.compterendu.CrActivity">

    <TextView
        android:id="@+id/action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/Choix"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/saisieAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/modifAC"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/SaisieAC" />

    <Button
        android:id="@+id/consultAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/modifAC"
        android:layout_marginTop="52dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/ConsulterAC" />

    <Button
        android:id="@+id/modifAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/ModifAC" />

    <Button
        android:id="@+id/validAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/ValidAC" />


    <Button
        android:id="@+id/retour_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/retour" />

</RelativeLayout>
