<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main2"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="bts.sio.compterendu.PanelVisiteurActivity"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Praticien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_below="@+id/NumRapport"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/Praticien" />

    <EditText
        android:id="@+id/praticien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/DateRapport"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Praticien"
        android:ems="10"
        android:inputType="textPersonName" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/motifSpinner"
            android:layout_alignTop="@+id/MotifVisite"
            android:layout_toRightOf="@+id/NumRapport"
            android:layout_toEndOf="@+id/NumRapport" />

        <TextView
            android:text="@string/NbRap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/NumRapport" />

        <TextView
            android:text="@string/SaisieCR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:textAllCaps="false"
            android:id="@+id/SaisieCR" />

        <TextView
            android:text="@string/DateRap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/Praticien"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/DateRapport" />

        <TextView
            android:text="@string/MotifVisite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/DateRapport"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/MotifVisite" />

        <TextView
            android:text="@string/Bilan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Bilan"
            android:layout_below="@+id/motifSpinner"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="38dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/echantSpinner"
            android:layout_below="@+id/Echant"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/quant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/echantSpinner"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/Qte"
        android:inputType="numberSigned"
        android:textSize="12sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/bilan"
            android:layout_alignTop="@+id/Bilan"
            android:layout_toRightOf="@+id/Praticien"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/dateRap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/MotifVisite"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/DateRapport"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/numRap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/NumRapport"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/NumRapport"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp" />

        <Button
            android:text="@string/Precedent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Precedent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/Suivant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Suivant"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/Echant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Echant"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/bilan"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
