<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bts.sio.compterendu.PanelVisiteurActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/BvnVisiteur"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="21sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/CR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="83dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/ChoixVisiteur1"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/AC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/CR"
        android:layout_marginTop="28dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/ChoixVisiteur2" />

    <Button
        android:id="@+id/Med"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/AC"
        android:layout_marginTop="27dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/ChoixVisiteur3" />

    <Button
        android:id="@+id/Prat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Med"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/ChoixVisiteur4" />

    <Button
        android:id="@+id/Collab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Prat"
        android:layout_marginTop="31dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/ChoixVisiteur5" />

</RelativeLayout>
