<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bts.sio.compterendu.CrActivity">

    <TextView
        android:id="@+id/action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/Choix"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/saisieCR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/modifCR"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/SaisieCR" />

    <Button
        android:id="@+id/consultCR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/modifCR"
        android:layout_marginTop="52dp"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/ConsulterCR" />

    <Button
        android:id="@+id/modifCR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:background="@android:drawable/toast_frame"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/ModifCR" />

</RelativeLayout>
