<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_content_rapport"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bts.sio.compterendu.PanelVisiteurActivity">

    <LinearLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SaisieCR"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_retour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/toast_frame"
            android:backgroundTint="@android:color/holo_blue_light"
            android:layout_marginRight="10dp"
            android:text="@string/retour" />

        <Button
            android:id="@+id/btn_modif"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@android:drawable/toast_frame"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/Modif_CR_short" />
    </LinearLayout>

    <TextView
        android:id="@+id/SaisieCR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ConsulterCR"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/crList_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_layout"
        android:layout_marginTop="30dp" />
</RelativeLayout>
